# NetPULL

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: db.rs  main.rs  models.rs  routes.rs
backend/src/handlers/: history.rs  mod.rs  video.rs
backend/src/services/: downloader.rs
frontend/: Cargo.toml  index.html  input.css  tailwind.config.js
frontend/src/: api.rs  app.rs  lib.rs  models.rs
frontend/src/components/: downloader.rs  header.rs  history.rs  mod.rs
